_archive/content-services/5.1/concepts/ch-upgrade.md
---
author: [Alfresco Documentation, Alfresco Documentation]
source: 
audience: 
category: 
option: 
---

# Upgrading

Use this recommended procedure for performing an upgrade.

-   **[Alfresco upgrade paths](../concepts/upgrade-path.md)**  
When you upgrade Alfresco, it is recommended that you follow a structured upgrade path between versions.
-   **[Upgrading from Alfresco Community Edition](../concepts/upgrade-community.md)**  
Any GA \(General Availability\) release of Alfresco Community Edition can be upgraded to the latest version of Alfresco One that includes the same Content Repository version family.
-   **[QuickStart upgrade guide](../concepts/quick-upgrade.md)**  
Use this information to upgrade Alfresco on a single instance and in a distributed and clustered environment.
-   **[Upgrade prerequisites checklist](../concepts/upgrade-prerequisites.md)**  
This checklist describes the requirements and prerequisites necessary to begin planning for upgrading an existing Alfresco version to Alfresco One 5.1.5.
-   **[Upgrading Alfresco](../tasks/upgrade-process.md)**  
Use this procedure to upgrade from a previous version of Alfresco. The process involves a new installation of the Alfresco binaries and configuration, and an in-place upgrade of a copy of the repository.
-   **[Upgrading search](../concepts/search-migration.md)**  
Use this information to migrate the search subsystem during an upgrade to Alfresco One 5.1.5.
-   **[Validating an upgrade](../tasks/upgrade-validate.md)**  
Once you have upgraded, follow these steps to validate the new installation.
-   **[Testing an Alfresco upgrade](../concepts/testing-alfresco-upgrade.md)**  
Testing an upgrade checks that Alfresco is successfully upgraded and is working as expected after the upgrade.
-   **[Restoring production data](../tasks/restore-prod-data.md)**  
Use this information to restore production data.

**Parent topic:**[Alfresco One](../concepts/welcome.md)

