_archive/content-services/5.2/concepts/ch-upgrade.md
---
author: [Alfresco Documentation, Alfresco Documentation]
source: 
audience: 
category: 
option: 
---

# Upgrading

Use this information for upgrading from a version of Alfresco Content Services to a later version, for applying a Service Pack, or for upgrading the search subsystem.

Before performing an upgrade or applying a Service Pack, make sure you check the recommended upgrade path and the prerequisites checklist. As a part of upgrade, you need to validate and test to ensure that Alfresco upgrade was successful.

For upgrading from a previous version of Alfresco Content Services to a later version, see [Upgrading Alfresco Content Services](../tasks/upgrade-process.md).

-   **[Alfresco Content Services upgrade paths](../concepts/upgrade-path.md)**  
When you upgrade Alfresco Content Services, it is recommended that you follow a structured upgrade path between versions.
-   **[Upgrading from Alfresco Community Edition](../concepts/upgrade-community.md)**  
Any GA \(General Availability\) release of Alfresco Community Edition can be upgraded to the latest version of Alfresco Content Services that includes the same Content Repository version family.
-   **[Upgrade guide](../concepts/quick-upgrade.md)**  
Use this information to upgrade Alfresco Content Services on a single instance and in a distributed and clustered environment.
-   **[Upgrade prerequisites checklist](../concepts/upgrade-prerequisites.md)**  
This checklist describes the requirements and prerequisites necessary to begin planning for upgrading an existing version to Alfresco Content Services 5.2.7.
-   **[Upgrading Alfresco Content Services](../tasks/upgrade-process.md)**  
Use this procedure to upgrade from a previous version of Alfresco Content Services. The process involves a new installation of the Alfresco Content Services binaries and configuration, and an in-place upgrade of a copy of the repository. Use this procedure to upgrade from a previous version of Alfresco Content Services.
-   **[Applying a Service Pack](../concepts/version-md.md)**  
Service packs of Alfresco Content Services are constrained in what they can contain in order to make the application process as safe as possible.
-   **[New Alfresco Content Services configuration properties](../concepts/repository-properties.md)**  
Alfresco Content Services 5.2.7 provides a range of new properties for configuring your installation, along with their default settings. These properties can be set in the alfresco-global.properties file.
-   **[Upgrading search](../concepts/search-migration.md)**  
Use this information to migrate the search subsystem during an upgrade to 5.2.7.
-   **[Validating an upgrade](../tasks/upgrade-validate.md)**  
Once you have upgraded, follow these steps to validate the new installation.
-   **[Testing an upgrade](../concepts/testing-alfresco-upgrade.md)**  
Testing an upgrade checks that Alfresco Content Services is successfully upgraded and is working as expected after the upgrade.
-   **[Restoring production data](../tasks/restore-prod-data.md)**  
Use this information to restore production data.

**Parent topic:**[Alfresco Content Services](../concepts/welcome.md)

